Create CSS folder and Index.Css File

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="../CSS/index.css">
     <title>The Fitlane</title>
+    <link rel="icon" type="image/x-icon" href="../Images/favicon.ico">
 </head>
+
 <body>
     <navbar>
         <img src="../Images/FitLaneLogo.jpg" alt="FitLane Logo">
@@ -17,10 +21,121 @@
             <li>Gift Sets</li>
             <li>Shoes</li>
             <li>Sale</li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><i class="bi bi-search"></i></li>
+            <li><i class="bi bi-person-circle"></i></li>
+            <li><i class="bi bi-cart4"></i></li>
         </ul>
     </navbar>
+    <!-- Image Slider -->
+    <section>
+        <div class="container">
+            <h3>Giving you the freedom <br>
+                to look and feel good<br>
+                while doing the workouts you love.
+            </h3>
+            <button>Shop Now</button>
+        </div>
+    </section>
+    <!-- Women -->
+    <section>
+        <h3>
+            We have curated the best Women's active wear for your workouts,<br>
+            athleisure or those days when you just feel like a lazy (sexy) sweet potato.
+        </h3>
+        <div class="container">
+            <div class="row"><img src="" alt="Sports Bras"></div>
+            <div class="row"><img src="" alt="Leggings"></div>
+            <div class="row"><img src="" alt="Sets"></div>
+            <div class="row"><img src="" alt="Tops"></div>
+        </div>
+        <button>Shop Now</button>
+    </section>
+    <!-- Men -->
+    <section>
+        <h3>
+            We have curated the best Men's active wear for your workouts,<br>
+            athleisure or those days when you're sure the six pack is there but it's shy.
+        </h3>
+        <div class="container">
+            <div class="row"><img src="" alt="T-Shirts"></div>
+            <div class="row"><img src="" alt="Shorts"></div>
+            <div class="row"><img src="" alt="Sets"></div>
+            <div class="row"><img src="" alt="Compression Pants"></div>
+        </div>
+        <button>Shop Now</button>
+    </section>
+    <!-- Accessories -->
+    <section>
+        <h3>
+            The Latest Accessories that you need to get moving and shaking,<br>
+            Whether it's resistance bands to get you through that last rep <br>
+            or a cap to keep the sun away, we've got it all.
+        </h3>
+        <div class="container">
+            <div class="row"><img src="" alt="Gloves"></div>
+            <div class="row"><img src="" alt="Dumbbells"></div>
+            <div class="row"><img src="" alt="Shoes"></div>
+            <div class="row"><img src="" alt="Caps"></div>
+        </div>
+        <button>Shop Now</button>
+    </section>
+    <!-- footer  -->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h3>Customer Service</h3>
+                    <ul>
+                        <li>Track My Order</li>
+                        <li>Return Policy</li>
+                        <li>FAQs</li>
+                        <li>Size Guide</li>
+                        <li>Gift Cards</li>
+                        <li>Contact Support</li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h3>My Account</h3>
+                    <ul>
+                        <li>Log In or Register</li>
+                        <li>Order History</li>
+                        <li>Billing and Shipping</li>
+                        <li>Favorites</li>
+                        <li>Refferal Code</li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h3>Follow Us</h3>
+                    <ul>
+                        <li><i class="bi bi-instagram"></i> Instagram</li>
+                        <li><i class="bi bi-facebook"></i> Facebook</li>
+                        <li><i class="bi bi-twitter"></i> Twitter</li>
+                        <li><i class="bi bi-whatsapp"></i> WhatsApp</li>
+                        <li><i class="bi bi-tiktok"></i> TikTok</li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h3>About Us</h3>
+                    <ul>
+                        <li>Stores</li>
+                        <li>Careers</li>
+                        <li>Press</li>
+                        <li>Events</li>
+                        <li>Reviews</li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h3>Newsletter</h3>
+                    <p>Subscribe to our newsletter and get 10% off your first purchase</p>
+                    <input type="email" placeholder="Enter your email">
+                    <button>Subscribe</button>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <small>&copy; Copyright 2023, The FitLane. All Rights Reserved. Terms Privacy Cookie Policy</small>
+        </div>
+    </footer>
 </body>
+
 </html>
