Create CSS values for Index.html File

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <navbar>
+    <navbar class="nav">
         <img src="../Images/FitLaneLogo.jpg" alt="FitLane Logo">
         <ul>
             <li>Women</li>
@@ -21,63 +21,96 @@
             <li>Gift Sets</li>
             <li>Shoes</li>
             <li>Sale</li>
+        </ul>
+        <ul>
             <li><i class="bi bi-search"></i></li>
-            <li><i class="bi bi-person-circle"></i></li>
-            <li><i class="bi bi-cart4"></i></li>
+            <li><i class="bi bi-person"></i></li>
+            <li><i class="bi bi-heart"></i></li>
+            <li><i class="bi bi-cart"></i></li>
         </ul>
     </navbar>
     <!-- Image Slider -->
     <section>
-        <div class="container">
+        <div class="container1">
             <h3>Giving you the freedom <br>
                 to look and feel good<br>
-                while doing the workouts you love.
+                in your own skin.</h3>
             </h3>
             <button>Shop Now</button>
         </div>
     </section>
     <!-- Women -->
     <section>
-        <h3>
-            We have curated the best Women's active wear for your workouts,<br>
-            athleisure or those days when you just feel like a lazy (sexy) sweet potato.
-        </h3>
-        <div class="container">
-            <div class="row"><img src="" alt="Sports Bras"></div>
-            <div class="row"><img src="" alt="Leggings"></div>
-            <div class="row"><img src="" alt="Sets"></div>
-            <div class="row"><img src="" alt="Tops"></div>
+        <div class="container2">
+            <h3>
+                We have curated the best Women's active wear for your workouts,<br>
+                athleisure or those days when you just feel like a lazy (sexy) sweet potato.
+            </h3>
+            <div class="categoryRow">
+                <div class="row"><img src="../Images/SportsBra1.jpg" alt="Sports Bras">
+                    <p>Sports Bras</p>
+                </div>
+                <div class="row"><img src="../Images/Leggings2.jpg" alt="Leggings">
+                    <p>Leggings</p>
+                </div>
+                <div class="row"><img src="../Images/Sets9.jpg" alt="Sets">
+                    <p>Sets</p>
+                </div>
+                <div class="row"><img src="../Images/Top4.jpg" alt="Tops">
+                    <p>Tops</p>
+                </div>
+            </div>
+            <button>Shop Now</button>
         </div>
-        <button>Shop Now</button>
     </section>
     <!-- Men -->
     <section>
-        <h3>
-            We have curated the best Men's active wear for your workouts,<br>
-            athleisure or those days when you're sure the six pack is there but it's shy.
-        </h3>
-        <div class="container">
-            <div class="row"><img src="" alt="T-Shirts"></div>
-            <div class="row"><img src="" alt="Shorts"></div>
-            <div class="row"><img src="" alt="Sets"></div>
-            <div class="row"><img src="" alt="Compression Pants"></div>
+        <div class="container2">
+            <h3>
+                We have curated the best Men's active wear for your workouts,<br>
+                athleisure or those days when you're sure the six pack is there but it's shy.
+            </h3>
+            <div class="categoryRow">
+                <div class="row"><img src="../Images/T-shirts.jpg" alt="T-Shirts">
+                    <p>T-Shirts</p>
+                </div>
+                <div class="row"><img src="../Images/Shorts.jpg" alt="Shorts">
+                    <p>Shorts</p>
+                </div>
+                <div class="row"><img src="../Images/Joggers.jpg" alt="Joggers">
+                    <p>Joggers</p>
+                </div>
+                <div class="row"><img src="../Images/Sets (1).jpg" alt="Sets">
+                    <p>Sets</p>
+                </div>
+            </div>
+            <button>Shop Now</button>
         </div>
-        <button>Shop Now</button>
     </section>
     <!-- Accessories -->
     <section>
-        <h3>
-            The Latest Accessories that you need to get moving and shaking,<br>
-            Whether it's resistance bands to get you through that last rep <br>
-            or a cap to keep the sun away, we've got it all.
-        </h3>
-        <div class="container">
-            <div class="row"><img src="" alt="Gloves"></div>
-            <div class="row"><img src="" alt="Dumbbells"></div>
-            <div class="row"><img src="" alt="Shoes"></div>
-            <div class="row"><img src="" alt="Caps"></div>
+        <div class="container2">
+            <h3>
+                The Latest Accessories that you need to get moving and shaking,<br>
+                Whether it's resistance bands to get you through that last rep <br>
+                or a cap to keep the sun away, we've got it all.
+            </h3>
+            <div class="categoryRow">
+                <div class="row"><img src="../Images/Gloves2.jpg" alt="Gloves">
+                    <p>Gloves</p>
+                </div>
+                <div class="row"><img src="../Images/Dumbells3.jpg" alt="Dumbbells">
+                    <p>Dumbbells</p>
+                </div>
+                <div class="row"><img src="../Images/ShoesW1.jpg" alt="Shoes">
+                    <p>Shoes</p>
+                </div>
+                <div class="row"><img src="../Images/Cap2.jpg" alt="Caps">
+                    <p>Caps</p>
+                </div>
+            </div>
+            <button>Shop Now</button>
         </div>
-        <button>Shop Now</button>
     </section>
     <!-- footer  -->
     <footer>
@@ -87,17 +120,14 @@
                     <h3>Customer Service</h3>
                     <ul>
                         <li>Track My Order</li>
-                        <li>Return Policy</li>
                         <li>FAQs</li>
                         <li>Size Guide</li>
-                        <li>Gift Cards</li>
                         <li>Contact Support</li>
                     </ul>
                 </div>
                 <div class="col">
                     <h3>My Account</h3>
                     <ul>
-                        <li>Log In or Register</li>
                         <li>Order History</li>
                         <li>Billing and Shipping</li>
                         <li>Favorites</li>
@@ -111,7 +141,6 @@
                         <li><i class="bi bi-facebook"></i> Facebook</li>
                         <li><i class="bi bi-twitter"></i> Twitter</li>
                         <li><i class="bi bi-whatsapp"></i> WhatsApp</li>
-                        <li><i class="bi bi-tiktok"></i> TikTok</li>
                     </ul>
                 </div>
                 <div class="col">
@@ -121,14 +150,7 @@
                         <li>Careers</li>
                         <li>Press</li>
                         <li>Events</li>
-                        <li>Reviews</li>
                     </ul>
-                </div>
-                <div class="col">
-                    <h3>Newsletter</h3>
-                    <p>Subscribe to our newsletter and get 10% off your first purchase</p>
-                    <input type="email" placeholder="Enter your email">
-                    <button>Subscribe</button>
                 </div>
             </div>
         </div>
