Replace class container with class footer

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -15,18 +15,18 @@
     <navbar class="nav">
         <img src="../Images/FitLaneLogo.jpg" alt="FitLane Logo">
         <ul>
-            <li>Women</li>
-            <li>Men</li>
-            <li>Accessories</li>
-            <li>Gift Sets</li>
-            <li>Shoes</li>
-            <li>Sale</li>
+            <li><a href="#">Women</a></li>
+            <li><a href="#">Men</a></li>
+            <li><a href="#">Accessories</a></li>
+            <li><a href="#">Sets</a></li>
+            <li><a href="#">Shoes</a></li>
+            <li><a href="#">Sale</a></li>
         </ul>
         <ul>
-            <li><i class="bi bi-search"></i></li>
-            <li><i class="bi bi-person"></i></li>
-            <li><i class="bi bi-heart"></i></li>
-            <li><i class="bi bi-cart"></i></li>
+            <li><i class="bi bi-search" id="icon"></i></li>
+            <li><i class="bi bi-person" id="icon"></i></li>
+            <li><i class="bi bi-heart"id="icon"></i></li>
+            <li><i class="bi bi-cart" id="icon"></i></li>
         </ul>
     </navbar>
     <!-- Image Slider -->
@@ -44,7 +44,7 @@
         <div class="container2">
             <h3>
                 We have curated the best Women's active wear for your workouts,<br>
-                athleisure or those days when you just feel like a lazy (sexy) sweet potato.
+                and those days when you just feel like a lazy (sexy) sweet potato.
             </h3>
             <div class="categoryRow">
                 <div class="row"><img src="../Images/SportsBra1.jpg" alt="Sports Bras">
@@ -67,8 +67,8 @@
     <section>
         <div class="container2">
             <h3>
-                We have curated the best Men's active wear for your workouts,<br>
-                athleisure or those days when you're sure the six pack is there but it's shy.
+                The best Men's active wear for your workouts,<br>
+                and those days when you're sure the six pack is there but it's shy.
             </h3>
             <div class="categoryRow">
                 <div class="row"><img src="../Images/T-shirts.jpg" alt="T-Shirts">
@@ -92,8 +92,7 @@
         <div class="container2">
             <h3>
                 The Latest Accessories that you need to get moving and shaking,<br>
-                Whether it's resistance bands to get you through that last rep <br>
-                or a cap to keep the sun away, we've got it all.
+                lifting gloves, dumbells, shoes, caps...we've got it all.
             </h3>
             <div class="categoryRow">
                 <div class="row"><img src="../Images/Gloves2.jpg" alt="Gloves">
@@ -114,9 +113,8 @@
     </section>
     <!-- footer  -->
     <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col">
+        <div class="footer">
+                <div class="row">
                     <h3>Customer Service</h3>
                     <ul>
                         <li>Track My Order</li>
@@ -125,7 +123,7 @@
                         <li>Contact Support</li>
                     </ul>
                 </div>
-                <div class="col">
+                <div class="row">
                     <h3>My Account</h3>
                     <ul>
                         <li>Order History</li>
@@ -134,16 +132,16 @@
                         <li>Refferal Code</li>
                     </ul>
                 </div>
-                <div class="col">
+                <div class="row">
                     <h3>Follow Us</h3>
                     <ul>
                         <li><i class="bi bi-instagram"></i> Instagram</li>
                         <li><i class="bi bi-facebook"></i> Facebook</li>
-                        <li><i class="bi bi-twitter"></i> Twitter</li>
+                        <li><i class="bi bi-twitter"></i> Tweet Us</li>
                         <li><i class="bi bi-whatsapp"></i> WhatsApp</li>
                     </ul>
                 </div>
-                <div class="col">
+                <div class="row">
                     <h3>About Us</h3>
                     <ul>
                         <li>Stores</li>
@@ -152,7 +150,6 @@
                         <li>Events</li>
                     </ul>
                 </div>
-            </div>
         </div>
         <div class="col">
             <small>&copy; Copyright 2023, The FitLane. All Rights Reserved. Terms Privacy Cookie Policy</small>
