Change Naming convention to match sections

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,15 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../CSS/index.css">
+    <link rel="stylesheet" href="../css/index.css">
     <title>The Fitlane</title>
     <link rel="icon" type="image/x-icon" href="../Images/favicon.ico">
 </head>
 
 <body>
     <navbar class="nav">
-        <img src="../Images/FitLaneLogo.jpg" alt="FitLane Logo">
+        <img src="../Images/fitLaneLogo.jpg" alt="FitLane Logo">
         <ul>
             <li><a href="#">Women</a></li>
             <li><a href="#">Men</a></li>
@@ -23,40 +24,37 @@
             <li><a href="#">Sale</a></li>
         </ul>
         <ul>
-            <li><i class="bi bi-search" id="icon"></i></li>
-            <li><i class="bi bi-person" id="icon"></i></li>
-            <li><i class="bi bi-heart"id="icon"></i></li>
-            <li><i class="bi bi-cart" id="icon"></i></li>
+            <li><i class="bi bi-search"></i></li>
+            <li><i class="bi bi-person-circle"></i></li>
+            <li><i class="bi bi-heart"></i></li>
+            <li><i class="bi bi-cart"></i></li>
         </ul>
     </navbar>
     <!-- Image Slider -->
     <section>
-        <div class="container1">
-            <h3>Giving you the freedom <br>
-                to look and feel good<br>
-                in your own skin.</h3>
-            </h3>
+        <div class="banner">
+            <h3>Giving you the freedom <br> to look and feel good<br>in your own skin.</h3>
             <button>Shop Now</button>
         </div>
     </section>
     <!-- Women -->
     <section>
-        <div class="container2">
+        <div class="women">
             <h3>
                 We have curated the best Women's active wear for your workouts,<br>
-                and those days when you just feel like a lazy (sexy) sweet potato.
+                and those days when you just feel like a lazy <span>sexy</span> sweet potato.
             </h3>
             <div class="categoryRow">
-                <div class="row"><img src="../Images/SportsBra1.jpg" alt="Sports Bras">
+                <div class="row"><img src="../Images/sportsBra1.jpg" alt="Sports Bras">
                     <p>Sports Bras</p>
                 </div>
-                <div class="row"><img src="../Images/Leggings2.jpg" alt="Leggings">
+                <div class="row"><img src="../Images/leggings2.jpg" alt="Leggings">
                     <p>Leggings</p>
                 </div>
-                <div class="row"><img src="../Images/Sets9.jpg" alt="Sets">
+                <div class="row"><img src="../Images/sets9.jpg" alt="Sets">
                     <p>Sets</p>
                 </div>
-                <div class="row"><img src="../Images/Top4.jpg" alt="Tops">
+                <div class="row"><img src="../Images/top4.jpg" alt="Tops">
                     <p>Tops</p>
                 </div>
             </div>
@@ -65,22 +63,22 @@
     </section>
     <!-- Men -->
     <section>
-        <div class="container2">
+        <div class="men">
             <h3>
-                The best Men's active wear for your workouts,<br>
-                and those days when you're sure the six pack is there but it's shy.
+                The best Men's active wear for your workouts and those days when  <br>
+               you're sure the six pack is there but it's shy...<span>it's okay, we believe you</span>.
             </h3>
             <div class="categoryRow">
-                <div class="row"><img src="../Images/T-shirts.jpg" alt="T-Shirts">
+                <div class="row"><img src="../Images/t-shirts.jpg" alt="T-Shirts">
                     <p>T-Shirts</p>
                 </div>
-                <div class="row"><img src="../Images/Shorts.jpg" alt="Shorts">
+                <div class="row"><img src="../Images/shorts.jpg" alt="Shorts">
                     <p>Shorts</p>
                 </div>
-                <div class="row"><img src="../Images/Joggers.jpg" alt="Joggers">
+                <div class="row"><img src="../Images/joggers.jpg" alt="Joggers">
                     <p>Joggers</p>
                 </div>
-                <div class="row"><img src="../Images/Sets (1).jpg" alt="Sets">
+                <div class="row"><img src="../Images/sets (1).jpg" alt="Sets">
                     <p>Sets</p>
                 </div>
             </div>
@@ -89,22 +87,22 @@
     </section>
     <!-- Accessories -->
     <section>
-        <div class="container2">
+        <div class="accessories">
             <h3>
-                The Latest Accessories that you need to get moving and shaking,<br>
-                lifting gloves, dumbells, shoes, caps...we've got it all.
+                The Latest Accessories that you need for your fitness routine,<br>
+                lifting gloves, dumbells, shoes, caps...<span>seriously we've got everything!</span>
             </h3>
             <div class="categoryRow">
-                <div class="row"><img src="../Images/Gloves2.jpg" alt="Gloves">
+                <div class="row"><img src="../Images/gloves2.jpg" alt="Gloves">
                     <p>Gloves</p>
                 </div>
-                <div class="row"><img src="../Images/Dumbells3.jpg" alt="Dumbbells">
-                    <p>Dumbbells</p>
+                <div class="row"><img src="../Images/Sets8.jpg" alt="Group Sets">
+                    <p>Group Sets</p>
                 </div>
-                <div class="row"><img src="../Images/ShoesW1.jpg" alt="Shoes">
+                <div class="row"><img src="../Images/shoesW1.jpg" alt="Shoes">
                     <p>Shoes</p>
                 </div>
-                <div class="row"><img src="../Images/Cap2.jpg" alt="Caps">
+                <div class="row"><img src="../Images/cap2.jpg" alt="Caps">
                     <p>Caps</p>
                 </div>
             </div>
@@ -113,7 +111,7 @@
     </section>
     <!-- footer  -->
     <footer>
-        <div class="footer">
+        <div class="information">
                 <div class="row">
                     <h3>Customer Service</h3>
                     <ul>
