--- a/HTML/index.html
+++ b/HTML/index.html
@@ -34,7 +34,10 @@
     <section>
         <div class="banner">
             <h3>Giving you the freedom <br> to look and feel good<br>in your own skin.</h3>
-            <button>Shop Now</button>
+            <div class="buttonContainer">
+                <button>Shop Now</button>
+            </div>
+           
         </div>
     </section>
     <!-- Women -->
@@ -58,7 +61,9 @@
                     <p>Tops</p>
                 </div>
             </div>
-            <button>Shop Now</button>
+            <div class="buttonContainer">
+                <button>Shop Now</button>
+            </div>
         </div>
     </section>
     <!-- Men -->
@@ -82,7 +87,9 @@
                     <p>Sets</p>
                 </div>
             </div>
-            <button>Shop Now</button>
+            <div class="buttonContainer">
+                <button>Shop Now</button>
+            </div>
         </div>
     </section>
     <!-- Accessories -->
@@ -106,7 +113,9 @@
                     <p>Caps</p>
                 </div>
             </div>
-            <button>Shop Now</button>
+            <div class="buttonContainer">
+                <button>Shop Now</button>
+            </div>
         </div>
     </section>
     <!-- footer  -->
