--- a/HTML/index.html
+++ b/HTML/index.html
@@ -20,12 +20,10 @@
             <li><a href="#">Men</a></li>
             <li><a href="#">Accessories</a></li>
             <li><a href="#">Sets</a></li>
-            <li><a href="#">Shoes</a></li>
-            <li><a href="#">Sale</a></li>
         </ul>
         <ul>
             <li><i class="bi bi-search"></i></li>
-            <li><i class="bi bi-person-circle"></i></li>
+            <li><a href="signUp.html"><i class="bi bi-person-circle"></i></a></li>
             <li><i class="bi bi-heart"></i></li>
             <li><i class="bi bi-cart"></i></li>
         </ul>
