--- a/HTML/signUp.html
+++ b/HTML/signUp.html
@@ -31,7 +31,7 @@
         </div>
         <div class="terms">
             <p>By creating an account, you agree to our <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a></p>
-            <span>Already have an account? <a href="signIn.html">Sign In</a></span>
+            <span>Already have an account? <a href="logIn.html">Log In</a></span>
         </div>    
     </form>
 </div>
