--- a/HTML/signUp.html
+++ b/HTML/signUp.html
@@ -5,20 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/signUp.css">
     <title>Sign Up Form</title>
+    <link rel="icon" type="image/x-icon" href="../Images/favicon.ico">
 </head>
 
 <body>
+    <a href="index.html" class="logo"><i class="bi bi-house-fill"></i></a>
     <div class="container">
         <img src="../images/fitLaneLogo.jpg" alt="fitlaneLogo">
-        <h2>Create your Fitlane Account</h2>
+        <h2>Hello! Sign Up for your Fitlane Account</h2>
     <form action="" method="post">
         <fieldset>
-            <label for="firstName">First Name:<input type="text" name="firstName" id="firstName" placeholder="First Name">
+            <label for="fullName">Full Name:<input type="text" name="fullName" id="fullName" placeholder="Full Name">
             </label>
-            <label for="lastName">Last Name: <input type="text" name="lastName" id="lastName" placeholder="Last Name">
-            </label>
+            <!-- <label for="lastName">Last Name: <input type="text" name="lastName" id="lastName" placeholder="Last Name">
+            </label> -->
             <label for="email">Email:<input type="email" name="email" id="email" placeholder="Email">
             </label>
             <label for="password">Password:<input type="password" name="password" id="password" placeholder="Password">
@@ -27,10 +30,9 @@
             </label>
         </fieldset>
         <div>
-            <button type="submit">CREATE ACCOUNT</button>
+            <button type="submit">SIGN UP</button>
         </div>
         <div class="terms">
-            <p>By creating an account, you agree to our <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a></p>
             <span>Already have an account? <a href="logIn.html">Log In</a></span>
         </div>    
     </form>
