--- a/HTML/logIn.html
+++ b/HTML/logIn.html
@@ -22,10 +22,9 @@
             </label>
         </fieldset>
         <div>
-            <button type="submit">LOG IN</button>
+            <button type="submit"><a href="index.html">LOG IN</a></button>
         </div>
         <div class="terms">
-            <p><a href="#">Forgot Password?</a></p>
             <span>Don't have an account? <a href="signUp.html">Sign Up</a></span>
         </div>    
     </form>
