--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/index.css">
     <title>The Fitlane</title>
@@ -25,7 +24,7 @@
             <li><i class="bi bi-search"></i></li>
             <li><a href="signUp.html"><i class="bi bi-person-circle"></i></a></li>
             <li><i class="bi bi-heart"></i></li>
-            <li><i class="bi bi-cart"></i></li>
+            <li><a href="payment.html"><i class="bi bi-cart"></i></a></li>
         </ul>
     </navbar>
     <!-- Image Slider -->
