--- a/HTML/logIn.html
+++ b/HTML/logIn.html
@@ -5,11 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/logIn.css">
     <title>Log In Form</title>
 </head>
 
 <body>
+    <navbar class="nav">
+        <img src="../Images/fitLaneLogo.jpg" alt="FitLane Logo">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">Women</a></li>
+            <li><a href="#">Men</a></li>
+            <li><a href="#">Accessories</a></li>
+            <li><a href="#">Sets</a></li>
+        </ul>
+        <ul>
+            <li><i class="bi bi-search"></i></li>
+            <li><a href="signUp.html"><i class="bi bi-person-circle"></i></a></li>
+            <li><i class="bi bi-heart"></i></li>
+            <li><a href="payment.html"><i class="bi bi-cart"></i></a></li>
+        </ul>
+    </navbar>
     <div class="container">
         <img src="../images/fitLaneLogo.jpg" alt="fitlaneLogo">
         <h2>Welcome Back! Log Into your FitLane Account</h2>
