--- a/HTML/signUp.html
+++ b/HTML/signUp.html
@@ -12,7 +12,23 @@
 </head>
 
 <body>
-    <a href="index.html" class="logo"><i class="bi bi-house-fill"></i></a>
+    <navbar class="nav">
+        <!-- <img src="../Images/fitLaneLogo.jpg" alt="FitLane Logo"> -->
+        <h1>The Fit Lane</h1>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">Women</a></li>
+            <li><a href="#">Men</a></li>
+            <li><a href="#">Accessories</a></li>
+            <li><a href="#">Sets</a></li>
+        </ul>
+        <ul>
+            <li><i class="bi bi-search"></i></li>
+            <li><a href="signUp.html"><i class="bi bi-person-circle"></i></a></li>
+            <li><i class="bi bi-heart"></i></li>
+            <li><a href="payment.html"><i class="bi bi-cart"></i></a></li>
+        </ul>
+    </navbar>
     <div class="container">
         <img src="../images/fitLaneLogo.jpg" alt="fitlaneLogo">
         <h2>Hello! Sign Up for your Fitlane Account</h2>
