--- a/HTML/payment.html
+++ b/HTML/payment.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/payment.css">
     <title>payment</title>
+    <link rel="icon" type="image/x-icon" href="../Images/favicon.ico">
 </head>
 
 <body>
