Modify about sections

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -42,7 +42,7 @@
         <div class="women">
             <h3>
                 We have curated the best Women's active wear for your workouts,<br>
-                and those days when you just feel like a lazy <span>sexy</span> sweet potato.
+                and those days when you just feel like a lazy <em><strong>sexy</strong></em> sweet potato.
             </h3>
             <div class="categoryRow">
                 <div class="row"><img src="../Images/sportsBra1.jpg" alt="Sports Bras">
@@ -68,7 +68,7 @@
         <div class="men">
             <h3>
                 The best Men's active wear for your workouts and those days when  <br>
-               you're sure the six pack is there but it's shy...<span>it's okay, we believe you</span>.
+               you're sure the six pack is there but it's shy...<strong><em>it's okay, we believe you</em></strong>.
             </h3>
             <div class="categoryRow">
                 <div class="row"><img src="../Images/t-shirts.jpg" alt="T-Shirts">
@@ -94,7 +94,7 @@
         <div class="accessories">
             <h3>
                 The Latest Accessories that you need for your fitness routine,<br>
-                lifting gloves, dumbells, shoes, caps...<span>seriously we've got everything!</span>
+                lifting gloves, dumbells, shoes, caps...<em><strong>seriously we've got everything!</strong></em>
             </h3>
             <div class="categoryRow">
                 <div class="row"><img src="../Images/gloves2.jpg" alt="Gloves">
